# problem4-mlops-pipeline

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  visualize.py
.github/workflows/: ml_app-ci.yaml
docs/: conf.py  index.rst
tests/: test_model.py
