[tool.poetry]
name = "mlops-inference-api"
version = "0.1.0"
description = ""
authors = ["IdrissMoluh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^8.1.0"
plotly = "^5.24.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
